<resources>
    <string name="app_name">Parkflow</string>
    <string name="login_identification_input_label">Email / Documento</string>
    <string name="login_password_input_label" >Password</string>

    <string name="subscribe_name_label">Name</string>
    <string name="subscribe_email_label">Email</string>
    <string name="subscribe_password_label">Password</string>
    <string name="subscribe_document_label">Document</string>
    <string name="subscribe_phone_label">Phone</string>


    <string name="nav_profile_label">Profile</string>
    <string name="nav_vehicles_label">Vehicles</string>
    <string name="profile_delete_btn_label">Delete</string>
    <string name="empty_text" />
    <string name="add_label">Add</string>
    <string name="vehicle_plate_label">Plate</string>
    <string name="vehicle_brand_label">Brand</string>
    <string name="vehicle_model_label">Model</string>
    <string name="vehicle_year_label">Year</string>
    <string name="vehicle_color_label">Color</string>
    <string name="return_label">Return</string>
    <string name="save_label">Save</string>
    <string name="profile_logout_label">Logout</string>
</resources>