<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#000000"
    android:backgroundTint="#090909"
    >

    <EditText
        android:id="@+id/vehicleNameTb"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/vehicle_model_label"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/default_color"
        android:textColorHint="@color/text_hint_color"
        app:layout_constraintBottom_toTopOf="@+id/vehicleBrandTb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/vehicleColorTb"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/vehicle_color_label"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/default_color"
        android:textColorHint="@color/text_hint_color"
        app:layout_constraintBottom_toTopOf="@+id/vehicleSubmitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/vehicleBrandTb"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/vehicle_brand_label"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/default_color"
        android:textColorHint="@color/text_hint_color"
        app:layout_constraintBottom_toTopOf="@+id/vehiclePlateTb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/vehiclePlateTb"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/vehicle_plate_label"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/default_color"
        android:textColorHint="@color/text_hint_color"
        app:layout_constraintBottom_toTopOf="@+id/vehicleYearTb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/vehicleYearTb"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/vehicle_year_label"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/default_color"
        android:textColorHint="@color/text_hint_color"
        app:layout_constraintBottom_toTopOf="@+id/vehicleColorTb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Adicionar Veículo"
        android:textColor="@color/default_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/vehicleSubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/vehicleReturnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="@string/return_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/return_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>