<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="@color/default_bg">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="SUBSCRIBE"
        android:textColor="@color/default_color"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="331dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/extended_logo" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/subscribe_name_label"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/default_color"
        android:textColorHint="@color/text_hint_color"
        app:layout_constraintBottom_toTopOf="@+id/emailEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/subscribe_email_label"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/default_color"
        android:textColorHint="@color/text_hint_color"
        app:layout_constraintBottom_toTopOf="@+id/phoneEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phoneEt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/subscribe_phone_label"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/default_color"
        android:textColorHint="@color/text_hint_color"
        app:layout_constraintBottom_toTopOf="@+id/documentEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/documentEt"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/subscribe_document_label"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/default_color"
        android:textColorHint="@color/text_hint_color"
        app:layout_constraintBottom_toTopOf="@+id/passEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passEt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/subscribe_password_label"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/default_color"
        android:textColorHint="@color/text_hint_color"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/subscribeSubmitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="Subscribe"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/subscribeErrorTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/text_error_color"
        app:layout_constraintBottom_toTopOf="@+id/nameEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>